set exchange and routing key to producer handle

--- a/message-producer/src/main/resources/application.properties
+++ b/message-producer/src/main/resources/application.properties
@@ -4,5 +4,11 @@ spring.rabbitmq.host=127.0.0.1
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-#開啟 confirm 確認機制
+# 開啟 confirm 確認機制
+## confirmCallback
+# 方式 SIMPLE,
+#	  CORRELATED,
+#	  NONE
 spring.rabbitmq.publisher-confirm-type=correlated
+## returnCallback 開關
+spring.rabbitmq.publisher-returns=true
